add stylelint, 118n plugin for eslint, fix all files

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,10 @@
 {
   "Тестовый пример": "Test example",
   "Язык": "English",
-  "Главная страница": "Main page"
+  "Главная страница": "Main page",
+  "Главная": "Home",
+  "О нас": "About us",
+  "Свернуть": "Close",
+  "Загрузка...": "Loading...",
+  "Развернуть": "Open"
 }
