--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,10 @@
 {
   "Тестовый пример": "Тестовый перевод",
   "Язык": "Русский",
-  "Главная страница": "Главная страница"
+  "Главная страница": "Главная страница",
+  "Главная": "Главная",
+  "О нас": "О нас",
+  "Свернуть": "Свернуть",
+  "Загрузка...": "Загрузка...",
+  "Развернуть": "Развернуть"
+}
