fix unknown bug...

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,10 +1,15 @@
 {
   "Тестовый пример": "Test example",
-  "Язык": "English",
+  "Перевод": "Translate",
   "Главная страница": "Main page",
-  "Главная": "Home",
-  "О нас": "About us",
-  "Свернуть": "Close",
-  "Загрузка...": "Loading...",
-  "Развернуть": "Open"
+  "Главная ": "Main page",
+  "О сайте ": "About us",
+  "Язык": "English",
+  "новый перевод": "новый перевод",
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "throw error": "throw error",
+  "Свернуть": "Open",
+  "Развернуть": "Close"
 }
