--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,10 +1,15 @@
 {
-  "Тестовый пример": "Тестовый перевод",
-  "Язык": "Русский",
+  "Тестовый пример": "Тестовый пример",
+  "Перевод": "Перевод",
   "Главная страница": "Главная страница",
-  "Главная": "Главная",
-  "О нас": "О нас",
+  "Главная ": "Главная",
+  "О сайте ": "О сайте",
+  "Язык": "Русский",
+  "новый перевод": "новый перевод",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "throw error": "throw error",
   "Свернуть": "Свернуть",
-  "Загрузка...": "Загрузка...",
   "Развернуть": "Развернуть"
 }
