--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "Главная ": "Main page",
   "О сайте ": "About us",
   "Язык": "English",
+  "Короткий язык": "En",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
