add custom input, add login form ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,8 @@
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
   "Свернуть": "Open",
-  "Развернуть": "Close"
+  "Развернуть": "Close",
+  "Войти": "Log in",
+  "Пароль": "Password",
+  "Логин": "Login"
 }
