--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,8 @@
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
   "Свернуть": "Свернуть",
-  "Развернуть": "Развернуть"
+  "Развернуть": "Развернуть",
+  "Войти": "Войти",
+  "Пароль": "Пароль",
+  "Логин": "Логин"
 }
