add lazy loading, add reducer manager, add dynamic module loader component

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,18 +2,22 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
-  "Главная ": "Главная",
-  "О сайте ": "О сайте",
   "Язык": "Русский",
-  "Короткий язык": "Ru",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
-  "Свернуть": "Свернуть",
-  "Развернуть": "Развернуть",
+  "Главная": "Главная",
+  "О сайте": "О сайте",
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru",
   "Войти": "Войти",
-  "Пароль": "Пароль",
-  "Логин": "Логин"
+  "increment": "increment",
+  "decrement": "decrement",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Выйти": "Выйти"
 }
