--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,18 +2,22 @@
   "Тестовый пример": "Test example",
   "Перевод": "Translate",
   "Главная страница": "Main page",
-  "Главная ": "Main page",
-  "О сайте ": "About us",
   "Язык": "English",
-  "Короткий язык": "En",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Page not found",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Обновить страницу",
+  "Произошла непредвиденная ошибка": "An unexpected error has occurred",
+  "Обновить страницу": "Reload page",
   "throw error": "throw error",
-  "Свернуть": "Open",
-  "Развернуть": "Close",
-  "Войти": "Log in",
-  "Пароль": "Password",
-  "Логин": "Login"
+  "Главная": "Main",
+  "О сайте": "About us",
+  "Переключить": "Переключить",
+  "Короткий язык": "En",
+  "Войти": "Login",
+  "increment": "increment",
+  "decrement": "decrement",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Auth form",
+  "Вы ввели неверный логин или пароль": "Uncorrect username or password",
+  "Выйти": "Выйти"
 }
